[MWPW-190395]: Fixed text prompt overlapping video play/pause controls on mobile (#950)
* Fixed overlapping issue of prompt on mobile

* Fixed prompt for rtl

---------

--- a/creativecloud/blocks/firefly-carousel/firefly-carousel.css
+++ b/creativecloud/blocks/firefly-carousel/firefly-carousel.css
@@ -85,8 +85,7 @@
 .firefly-carousel .firefly-carousel-prompt {
   position: absolute;
   bottom: 16px;
-  left: 50%;
-  transform: translateX(-50%);
+  inset-inline-start: 15px;
   display: none;
   flex-direction: row;
   align-items: center;
@@ -197,7 +196,6 @@
   .firefly-carousel .firefly-carousel-prompt {
     left: 30px;
     bottom: 20px;
-    transform: none;
     max-width: calc(var(--ff-card-width) / 2.2);
   }
 
